mule-user-guide/v/3.2/jmx-management.adoc
=  JMX管理

[WARNING]
*This topic relates to the most recent version of Mule ESB*
要查看以前版本的Mule ESB中的相应主题，请单击MULE2USER：JMX％20Management [here]

http://java.sun.com/jmx[Java管理扩展（JMX）]是管理应用程序，设备，服务和其他资源的简单而标准的方式。 JMX是动态的，因此您可以在创建，安装和实施资源时使用它来监视和管理资源。您还可以使用JMX来监视和管理Java虚拟机（JVM）。

每个资源都由一个或多个受管Bean或MBean进行检测。所有MBean都在MBean服务器中注册。 JMX服务器代理由一个Mbean服务器和一组处理Mbeans的服务组成。

对于JMX支持，Mule ESB提供了几个 link:/mule-user-guide/v/3.2/mule-agents[代理]。配置JMX最简单的方法是使用默认的JMX支持代理。

== 使用默认的JMX支持代理

您可以使用`<jmx-default-config>`元素同时配置多个JMX代理。设置时，此元素注册以下代理：

*  JMX代理
rmi：// localhost：1099上的*  RMI注册代理（如有必要）
* 服务上的远程JMX访问：jmx：rmi：/// jndi / rmi：// localhost：1099 / server
* （可选）Log4J JMX代理，它公开了Mule用于JMX管理的Log4J实例的配置
用于使用JMX通知接收服务器通知的*  JMX通知代理
* （可选）MX4J适配器，它提供基于Web的JMX管理，统计和配置查看Mule实例

该元素包含以下属性：

xslt：由于以下原因，请阅读http://www.mulesource.org/xslt/mule/schemadoc/2.0/individual-transport-or-module-wiki.xsl错误：java.io.IOException：服务器返回的HTTP响应代码：401 for URL：http://svn.codehaus.org/mule/branches/mule-2.0.x/tools/schemadocs/src/main/resources/xslt//individual-transport-or-module-wiki.xsl

例如：

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8" ?> <mule xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:spring="http://www.springframework.org/schema/beans" xmlns:management="http://www.mulesoft.org/schema/mule/management" xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-2.5.xsd http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.0/mule.xsd http://www.mulesoft.org/schema/mule/management http://www.mulesoft.org/schema/mule/management/3.0/mule-management.xsd">  <management:jmx-default-config port="1098" registerMx4jAdapter="true">    <management:credentials>      <spring:entry key="jsmith" value="foo"/>      <spring:entry key="dthomas" value="bar"/>      <spring:entry key="clee" value="pwd"/>    </management:credentials>  </management:jmx-default-config> </mule>
----

*Note:*如果您不想使用默认值1099，则只指定端口。

默认的代理为JMX做了很多有用的管道工作，但是以牺牲许多参数的默认值为代价。如果您需要定制一些子系统，您可以：

* 子类 http://www.mulesoft.org/docs/site/current/apidocs/org/mule/module/management/agent/DefaultJmxSupportAgent.html[DefaultJmxSupportAgent]并覆盖相应的`createXXX()`工厂方法。
* 将此支持代理提供的服务拆分为单独的代理并分别进行配置。

== 配置JMX代理

JMX代理程序启用到Mule的本地或远程JMX连接的配置，并向MBean服务器注册Mule服务。然后，您可以使用JMX查看Mule Manager的配置状态，停止并启动Mule实例，停止并启动服务，停止/启动/恢复服务组件，以及查询单个服务或整个服务器上的事件处理和端点路由统计信息实例。

您可以使用`<jmx-server>`元素配置JMX代理。您可以在代理上设置以下属性。

xslt：由于以下原因，请阅读http://www.mulesoft.org/xslt/mule/schemadoc/2.0/individual-transport-or-module-wiki.xsl错误：java.io.IOException：服务器返回的HTTP响应代码：401 for URL：http://svn.codehaus.org/mule/branches/mule-2.0.x/tools/schemadocs/src/main/resources/xslt//individual-transport-or-module-wiki.xsl

例如：

[source, xml, linenums]
----
<management:jmx-server >  <management:connector-server url="service:jmx:rmi:///jndi/rmi://localhost:1099/server" rebind="false" />  <management:credentials>    <spring:entry key="jsmith" value="foo" />     <spring:entry key="dthomas" value="bar" />   </management:credentials></management:jmx-server>
----

请注意，Mule服务器的JMX域取自Mule服务器ID。要设置服务器标识，请在命令行中设置`-M-Dmule.serverId=YOUR_MULE_SERVER_ID`系统属性，或通过调用`org.mule.config.DefaultMuleConfiguration.setId()`以编程方式设置它。您还可以按如下方式在您的`web.xml`文件中进行设置：

[source, xml, linenums]
----
<context-param>        <param-name>mule.serverId</param-name>        <param-value>MyServer</param-value></context-param>
----

== 远程管理

您可以使用第 http://mc4j.org[MC4J]这样的第三方工具来配置Mule JMX子系统以进行远程管理。 Mule提供了一个RMI注册中心代理，它可以绑定到现有的RMI注册中心，或者在已定义的URI上创建一个新注册代理。

您可以使用`<rmi-server>`元素配置RMI注册中心代理。此元素具有两个属性：`serverUri`，您将其设置为RMI服务器的URI（+）
默认是rmi：// localhost：1099）和`createRegistry`，如果你想创建一个新的注册表而不是绑定到现有的注册表，那么你设置为true。

例如：

[source, xml, linenums]
----
<management:rmi-server serverUri="rmi://myServer.com:1099" createRegistry="true" />
----

==  JMX通知代理

`<jmx-notifications>`元素配置发送JMX服务器通知的JMX通知代理。该元素具有以下属性：

[%header,cols="10,90"]
|===
| {属性{1}}说明
| ignoreManagerNotifications  |是否忽略Mule管理器上状态更改的通知，例如初始化，启动和停止。
| ignoreModelNotifications  |是否忽略模型上状态更改的通知，例如模型初始化，启动和停止或正在注册或未注册的组件。
| ignoreComponentNotifications  |是否忽略组件状态更改的通知，例如组件启动，停止，暂停或恢复时的状态更改。
| ignoreConnectionNotifications  |当连接器尝试连接到其基础资源时是否忽略通知。连接建立，释放或连接尝试失败时会触发通知。
| ignoreSecurityNotifications  |是否忽略有关安全性的通知。
| ignoreManagementNotifications  |是否忽略请求被拒绝安全访问时的通知。
| ignoreCustomNotifications  |是否忽略由对象触发的通知到自定义通知侦听器。
| ignoreAdminNotifications  |是否忽略有关Mule Admin Agent收到的请求的管理通知。这些通常由MuleClient调用使用RemoteDispatcher触发，RemoteDispatcher代理远程服务器的调用。
| ignoreMessageNotifications  |是否忽略消息通知。当系统发送或接收事件时会触发这些通知。它们非常适合追踪，但它们会产生性能影响，所以它们只能在测试过程中使用。
|===

例如：

[source, xml, linenums]
----
<management:jmx-notifications ignoreAdminNotifications="true" ignoreMessageNotifications="true" />
----

== 端点通知发布者代理

此代理将服务器通知路由到指定的端点URI。您可以使用`<publish-notifications>`元素对其进行配置，并使用`endpointAddress`属性指定端点。例如：

[source, xml, linenums]
----
<management:publish-notifications endpointAddress="vm://myService" />
----

==  Log4J代理

http://logging.apache.org/log4j/index.html[log4j的]代理公开了Mule用于JMX管理的Log4J实例的配置。使用`<jmx-log4j>`元素启用Log4J代理。它不需要任何额外的属性。

例如：

[source, xml, linenums]
----
<management:jmx-log4j/>
----

==  Log4J通知代理

Log4J通知代理使用Log4J将服务器通知记录到文件或控制台。您可以使用`<log4j-notifications>`元素配置此代理。它采用与JMX通知代理程序相同的属性以及两个附加属性：`logName`（用于识别此日志的名称）和`logConfigFile`，这是您要输出日志消息的文件的名称。

Log4J通知代理还接受`<level-mapping>`子元素，该子元素接受一对或多对严重性/ eventId属性。 `severity`属性指定要记录相应事件ID的通知的严重级别。严重级别可以是DEBUG，INFO，WARN，ERROR或FATAL。 `eventId`属性指定要记录的事件的类型。事件ID是通知类型加上操作，例如`ModelNotification.stop`。

例如：

[source, xml, linenums]
----
<management:log4j-notifications logName="myMuleLog" logConfigFile="mule-log.txt">  <management:level-mapping eventId="ModelNotification.stop" severity="WARN"/> </management:log4j-notifications>
----

== 电锯通知代理

Chainsaw通知代理将服务器通知记录到 http://logging.apache.org/chainsaw/index.html[电锯控制台]。您可以使用`<chainsaw-notifications>`元素配置此代理。它具有与JMX通知代理程序相同的属性以及另外两个属性`chainsawHost`和\ {chainsawPort}}，它们指定Chainsaw控制台的主机名和端口。

Chainsaw通知代理还接受`<level-mapping>`子元素，该子元素具有一对或多对严重性/ eventId属性。 `severity`属性指定要发送给Chainsaw控制台的相应事件ID的通知的严重级别。严重级别可以是DEBUG，INFO，WARN，ERROR或FATAL。 `eventId`属性指定要发送到Chainsaw控制台的事件类型。事件ID是通知类型加上操作，例如`ModelNotification.stop`。

例如：

[source, xml, linenums]
----
<management:chainsaw-notifications chainsawHost="localhost" chainsawPort="20202">  <management:level-mapping eventId="ModelNotification.stop" severity="WARN"/> </management:chainsaw-notifications>
----

==  MX4J适配器

http://mx4j.sourceforge.net/[MX4J]是JMX技术的开源实现。 Mule的MX4J代理配置MX4J HTTP适配器，以提供Mule实例的JMX管理，统计和配置查看。您使用`<jmx-mx4j-adaptor>`元素配置MX4J代理。

xslt：由于以下原因，请阅读http://www.mulesoft.org/xslt/mule/schemadoc/2.0/individual-transport-or-module-wiki.xsl错误：java.io.IOException：服务器返回的HTTP响应代码：401 for URL：http://svn.codehaus.org/mule/branches/mule-2.0.x/tools/schemadocs/src/main/resources/xslt//individual-transport-or-module-wiki.xsl

例如：

[source, xml, linenums]
----
<management:jmx-mx4j-adaptor jmxAdaptorUrl="https://myjmxserver.com:9999">  <management:socketFactoryProperties>    <spring:entry key="keystore" value="/path/to/keystore" />     <spring:entry key="storepass" value="storepwd" />   </management:socketFactoryProperties></management:jmx-mx4j-adaptor>
----

为了安全起见，只能从本地主机访问管理控制台。要放宽此限制，请将"localhost"更改为"0.0.0.0"，以允许从LAN上的任何计算机访问。有关更多信息，请参阅 http://mx4j.sourceforge.net/docs[MX4J文档]。

===  MX4J安全性

您可以使用用户名和密码来保护JMX Web控制台。如果已指定`login`属性，则应用身份验证方案。

除了保护控制台之外，您还可以使用SSL保护传输中的数据。如果`socketFactoryProperties`元素至少包含一个属性，则代理将切换到HTTPS连接。如果配置中忽略此元素，则即使您在`jmxAdaptorUrl`属性中指定了https：//，代理也将始终使用HTTP。

=== 查看统计信息

骡陷阱许多不同的统计数据关于服务器的运行状态和事件的数量处理。您可以通过将浏览器指向http：// localhost：9999 /然后单击任何JMX域名（JMImplementation除外）来查看JMX管理控制台中的Mule统计报告，或者转至统计信息选项卡并查询JMX域从那里统计。

image:jmx-stats.png[JMX的统计数据]

YourKit Profiler。== 

此代理将 http://www.yourkit.com/[YourKit]概要分析器公开给JMX以提供CPU和内存分析。要使用此代理，您必须如下所示配置`<yourkit-profiler>`元素，并且必须按照 link:/mule-user-guide/v/3.2/profiling-mule[剖析Mule]中所述安装并运行Profiler。

[source, xml, linenums]
----
<management:yourkit-profiler />
----
